--- a/slides/11-randeff/randeff.Rmd
+++ b/slides/11-randeff/randeff.Rmd
@@ -25,14 +25,6 @@ library(faraway)
 knitr::opts_chunk$set(fig.align = 'center', cache = FALSE)
 ```
 
-Display system information and load `tidyverse` and `faraway` packages
-```{r}
-sessionInfo()
-library(tidyverse)
-library(faraway)
-```
-`faraway` package contains the datasets in the ELMR book.
-
 ## Introduction
 
 - The `pulp` data set contains data from an experiment to test the paper brightness depending on a shift operator. 
@@ -61,18 +53,18 @@ options(contrasts = c("contr.sum", "contr.poly"))
 lmod <- lm(bright ~ operator, data = pulp)
 summary(lmod)
 ```
-The contrast `contr.sum` forces the coefficients for 4 operators sum to 0. So the coeffiicient for the fourth operator is `r -sum(coef(lmod)[2:4])`.
+The contrast `contr.sum` forces the coefficients for 4 operators sum to 0 (when using the dummy/one-hot coding). So the coeffiicient for the 4th operator is `r -sum(coef(lmod)[2:4])`.
 ```{r}
 model.matrix(lmod)
 ```
 The factor `operator` is significant with p-value 0.023.
 ```{r}
-drop1(lmod, test = "F")
+anova(lmod, test = "F")
 ```
 
-- The hypothesis being test in the ANOVA is _are these four operators same_ in terms of the paper brightness they produce. This is called a **fixed effects model** because the effects $\alpha_i$ are assumed to be fixed. 
+- The hypothesis being tested in the ANOVA is _are these four operators same_ in terms of the paper brightness they produce. This is called a **fixed effects model** because the effects $\alpha_i$ are assumed to be fixed. 
 
-- Suppose we are interested in the research question _are the population of operators all same_ based on this data set? We will arrive to a random effects model
+- Suppose we are interested in the research question _are the population of operators all same_ based on this data set? We will arrive a random effects model
 $$
 y_{ij} = \mu + \alpha_i + \epsilon_{ij}, \quad i = 1,\ldots,4, j = 1,\ldots,5,
 $$
@@ -81,7 +73,7 @@ where we assume
     - $\epsilon_{ij}$ are iid $N(0,\sigma_{\epsilon}^2)$, and   
     - $\alpha_i$ and $\epsilon_{ij}$ are jointly independent.  
 
-    This is called a **random effects** model because now the effects $\alpha_i$ are assumed to be random.
+    This is called a **random effects model** because now the effects $\alpha_i$ are assumed to be random. The parameters in this random effects model are $\mu$, $\sigma_\alpha^2$, and $\sigma_\epsilon^2$. The latter two are also called the variance component parameters. To test the research hypothesis, we would test $H_0: \sigma_\alpha^2=0$.
 
 - Differences between a fixed effects model and a random effects model.  
     1. the interpretation is different,  
@@ -92,13 +84,13 @@ where we assume
 
 ## Mixed effects model
 
-- Traditionally, linear models have been divided into three categories:
+- Traditionally, linear models can be divided into three categories:
 
     1. Fixed effects model: $\mathbf{y} = \mathbf{X} \boldsymbol{\beta} + \boldsymbol{\epsilon}$, where $\boldsymbol{\beta}$ is fixed.
     
     2. Random effects model: $\mathbf{y} = \mathbf{Z} \boldsymbol{\gamma} + \boldsymbol{\epsilon}$, where $\boldsymbol{\gamma}$ is random.
     
-    3. Mixed effects model: $\mathbf{y} = \mathbf{X} \boldsymbol{\beta} + \mathbf{Z} \boldsymbol{\gamma} + \boldsymbol{\epsilon}$, where $\boldsymbol{\beta}$ is fixed and $\boldsymbol{\gamma}$ is random.
+    3. Mixed effects model or mixed model: $\mathbf{y} = \mathbf{X} \boldsymbol{\beta} + \mathbf{Z} \boldsymbol{\gamma} + \boldsymbol{\epsilon}$, where $\boldsymbol{\beta}$ is fixed and $\boldsymbol{\gamma}$ is random.
 
 - In a mixed effects model
 \begin{eqnarray*}
@@ -113,26 +105,26 @@ where
 
 - Primary goal of the mixed model (aka variance components model) is to  
     - estimation and testing of the fixed effects $\boldsymbol{\beta}$,  
-    - estimation and testing of the variance components,   $(\sigma^2, \sigma_1^2, \ldots, \sigma_m^2)$, and  
+    - estimation and testing of the variance component parameters, and  
     - prediction.  
 
 ## Example: one-way ANOVA 
 
-- For the one-way ANOVA random effects model
+- For the one-way ANOVA random effects model with $a$ levels and $n_i$ observations in level $i$,
 $$
-y_{ij} = \mu + \alpha_i + \epsilon_{ij}, \quad i=1,\ldots,a
+y_{ij} = \mu + \alpha_i + \epsilon_{ij}, \quad i=1,\ldots,a,
 $$
 we recognize it as a mixed effects model
 \begin{eqnarray*}
-\mathbf{y} = \mathbf{1}_n \beta_0 + \begin{pmatrix}
+\mathbf{y} = \mathbf{1}_n \mu + \begin{pmatrix}
 \mathbf{1}_{n_1} & & \\
 & \vdots & \\
 & & \mathbf{1}_{n_a}
 \end{pmatrix} \boldsymbol{\gamma} + \boldsymbol{\epsilon},
 \end{eqnarray*}
-where $\boldsymbol{\gamma} \sim N(\mathbf{0}_a, \sigma_{\alpha}^2 \mathbf{I}_a)$ and $\boldsymbol{\epsilon} \sim N(\mathbf{0}_{\sum_i n_i}, \sigma_{\epsilon}^2 \mathbf{I})$ are independent. $n_i$ are number of observations in level $i$. 
+where $\boldsymbol{\gamma} \sim N(\mathbf{0}_a, \sigma_{\alpha}^2 \mathbf{I}_a)$ and $\boldsymbol{\epsilon} \sim N(\mathbf{0}_{\sum_i n_i}, \sigma_{\epsilon}^2 \mathbf{I})$ are independent. Note in $\mathbf{Z}$ use have one column for each level. 
 
-- How do we estimate parameters $\beta_0$, $\sigma_{\alpha}^2$, and $\sigma_{\epsilon}^2$?
+- How do we estimate parameters $\mu$, $\sigma_{\alpha}^2$, and $\sigma_{\epsilon}^2$?
 
 ## Estimation
 
@@ -160,14 +152,18 @@ which can be solved to obtain estimators
 ```{r}
 (aovmod <- aov(bright ~ operator, data = pulp) %>%
   summary())
+str(aovmod)
 ```
 We estimate $\sigma_{\alpha}^2$ by
 ```{r}
-str(aovmod)
 (aovmod[1][[1]][[3]][1] - aovmod[1][[1]][[3]][2]) / 5
 ```
+and $\sigma_{\epsilon}^2$ by
+```{r}
+aovmod[1][[1]][[3]][2]
+```
 
-- Drawbacks of ANOVA estimators.  
+- Drawbacks of ANOVA estimators.
     1. When MSA<MSE, we obtain $\widehat{\sigma}_{\alpha}^2$.  
     2. Hard to generalize to unbalanced ANOVA or more complicated designs. 
     
@@ -175,9 +171,9 @@ str(aovmod)
 
 - For the mixed effects model
 \begin{eqnarray*}
-	\mathbf{y} = \mathbf{X} \boldsymbol{\beta} + \mathbf{Z} \boldsymbol{\gamma} + \boldsymbol{\epsilon}.
+	\mathbf{y} = \mathbf{X} \boldsymbol{\beta} + \mathbf{Z} \boldsymbol{\gamma} + \boldsymbol{\epsilon},
 \end{eqnarray*}
-We have
+where $\boldsymbol{\epsilon} \sim N(\mathbf{0}_n, \sigma^2 \mathbf{I})$ and $\boldsymbol{\gamma} \sim N(\mathbf{0}_q, \boldsymbol{\Sigma})$ are independent of each other, we have
 $$
 \mathbf{Y} \sim N(\mathbf{X} \boldsymbol{\beta}, \mathbf{Z} \boldsymbol{\Sigma} \mathbf{Z}^T + \sigma^2 \mathbf{I}).
 $$
@@ -203,7 +199,7 @@ $$
 $$
 where $p$ is the number of parameters. 
 
-- Let's find the MLE for the `pulp` data using `lme4` package. The syntax `(1 | operator)` instructs that the data is grouped by `operator` and the `1` indicates that random effect is constant within each group. 
+- Let's find the MLE for the `pulp` data using `lme4` package. The syntax `(1 | operator)` instructs that the data is grouped by `operator` and the `1` indicates that random effect is constant within each group. The default method is REML so we set `REML = FALSE` to compute the MLE instead.
 
 ```{r}
 library(lme4)
@@ -216,13 +212,13 @@ summary(smod)
 
 - The restricted maximum likelihood (REML) method tries to reduce the bias in variance component estimates. 
 
-- Let $\mathbf{K} \in \mathbb{R}^{n-p}$ be any basis of the space ${\cal N}(\mathbf{X}^T)$. Then
+- Assume $\mathbf{X}$ has full column rank $p$. Let $\mathbf{K} \in \mathbb{R}^{n-p}$ be any basis of the space ${\cal N}(\mathbf{X}^T)$, which is orthogonal to ${\cal C}(\mathbf{X})$. Then
 $$
 \mathbf{K}^T \mathbf{Y} \sim N(\mathbf{0}_{n-p}, \mathbf{K}^T (\mathbf{Z} \boldsymbol{\Sigma} \mathbf{Z}^T + \sigma^2 \mathbf{I}) \mathbf{K}).
 $$
-We estimate variance component parameters $(\sigma^2, \boldsymbol{\Sigma})$ by MLE using this transformed data. Then we estimate fixed effects $\boldsymbol{\beta}$ using general least squares.
+We estimate variance component parameters $(\sigma^2, \boldsymbol{\Sigma})$ by MLE using this transformed data $(\mathbf{K}^T \mathbf{y}, \mathbf{K}^T \mathbf{Z})$. Then we estimate fixed effects $\boldsymbol{\beta}$ using general least squares. We can show that the REML estimate does not depend on the choice of $\mathbf{K}$.
 
-- Let's find the REML for the `pulp` data.
+- Let's find the REML for the `pulp` data using `lme4`. 
 ```{r}
 library(lme4)
 
@@ -233,7 +229,7 @@ We found the REML estimate is exactly same as ANOVA estimate. **Exercise (HW4)**
 
 ## Inference
 
-- If we compare two nested models that differ only in fixed effects, we can use the standard likelihood ratio test (LRT). Remember we cannot use REML estimates for LRT.  
+- If we compare two nested models that differ only in fixed effects, we can use the standard likelihood ratio test (LRT). Remember we have to use REML estimates for LRT.  
 
     F tests for fixed effects can fail. What degrees of freedom to use? 
 
@@ -247,12 +243,12 @@ pchisq(lrtstat, 1, lower.tail = FALSE)
 
 ### Parametric bootstrap
 
-- The idea of parameteric bootstrap is we generate new $y$ from the fitted null model many times. For each simulation replicate, we carry out the LRT. Then the p-value is estimated by the proportion of simulation replicates that generate LRT test statistic larger than the observed one $2.5684$.
+- The idea of parameteric bootstrap is we generate new $y$ from the fitted null model many times. For each simulation replicate, we calculate the LRT statistic. Then the p-value is estimated by the proportion of simulation replicates that generate LRT statistics larger than the observed one $2.5684$.
 
 ```{r}
 B <- 1000
 lrstat <- numeric(B)
-set.seed(123)
+set.seed(123) # for reproducibility
 for (i in 1:B) {
   y <- unlist(simulate(nullmod))
   bnull <- lm(y ~ 1)
@@ -261,19 +257,24 @@ for (i in 1:B) {
 }
 
 # parametric bootstrap p-value
-mean(lrstat > 2.5684)
+pval <- mean(lrstat > 2.5684)
+```
+The standard error of the p-value is
+```{r}
+sqrt(pval * (1 - pval) / B)
 ```
 
 - Advantages of parametric boostrap:  
     - It's not restricted to MLE estimators. It applies to any other estimators.  
-    - It does not rely on the dubious asymptotic $\chi_2$ distribution.  
+    - It does not rely on the dubious asymptotic $\chi^2$ distribution.  
     - It can be used to generate confidence intervals.  
+    - It applies to inference of both $\boldsymbol{\beta}$ and variance component parameters.  
     
 - Drawbacks of parametric bootstrap: computationally intensive. 
 
 ### Exact LRT and RLRT test
 
-Another simulation based method.
+Another simulation based method is provided by the `RLRsim` package.
 ```{r}
 library(RLRsim)
 
@@ -286,18 +287,19 @@ exactRLRT(mmod)
 - Consider the mixed effects model
 $$
 \begin{eqnarray*}
-	\mathbf{y} = \mathbf{X} \boldsymbol{\beta} + \mathbf{Z} \boldsymbol{\gamma} + \boldsymbol{\epsilon}
+	\mathbf{y} = \mathbf{X} \boldsymbol{\beta} + \mathbf{Z} \boldsymbol{\gamma} + \boldsymbol{\epsilon},
 \end{eqnarray*}
 $$
+where $\boldsymbol{\epsilon} \sim N(\mathbf{0}_n, \sigma^2 \mathbf{I})$ and $\boldsymbol{\gamma} \sim N(\mathbf{0}_q, \boldsymbol{\Sigma})$ are independent of each other.
 The random effects $\boldsymbol{\gamma}$ are random variables. It does not make sense to estimate $\boldsymbol{\gamma}$. 
 
-- However, if we can take Bayesian point of view. We have a **likelihood**
+- However, if we take the Bayesian point of view, we can estimate it by posterior mean. We have a **likelihood**
 $$
-\mathbf{y} \mid \boldsymbol{\gamma} \sim N(\mathbf{X} \boldsymbol{\beta}, \sigma^2 \mathbf{I}_n)
+\mathbf{y} \mid \boldsymbol{\gamma} \sim N(\mathbf{X} \boldsymbol{\beta} + \mathbf{Z} \boldsymbol{\gamma}, \sigma^2 \mathbf{I}_n)
 $$
 and a **prior distribution**
 $$
-\boldsymbol{\gamma} \sim N(\mathbf{0}_a, \boldsymbol{\Sigma}).
+\boldsymbol{\gamma} \sim N(\mathbf{0}_q, \boldsymbol{\Sigma}).
 $$
 Then by the Bayes theorem, the **posterior distribution** is
 \begin{eqnarray*}
@@ -309,7 +311,7 @@ $$
 \mathbb{E} (\boldsymbol{\gamma} \mid \mathbf{y}) = \boldsymbol{\Sigma} \mathbf{Z} (\mathbf{Z} \boldsymbol{\Sigma} \mathbf{Z}^T + \sigma^2 \mathbf{I})^{-1} (\mathbf{y} - \mathbf{X} \boldsymbol{\beta}).
 $$
 
-- We can use this posterior mean to restimate random effects. For the `pulp` data
+- We can use this posterior mean to restimate random effects. For the `pulp` data, estimte of random effects are obtained by
 ```{r}
 ranef(mmod)$operator
 ```
@@ -321,7 +323,7 @@ We found the estimated random effects are uniformly smaller than the fixed effec
 ```{r}
 cc[[1]]$operator / ranef(mmod)$operator
 ```
-That's why Bayesian estimates are often called the shrinkage estimator.
+That's why Bayesian estimates are often called the shrinkage estimator. **Exercise:** prove this in HW4 for the balanced one-way ANOVA example.
 
 ## Prediction
 
@@ -343,7 +345,7 @@ predict(mmod, re.form = ~ 0)
 
 - In the `pulp` example, `operator` defines blocks. 
 
-- In the `penicillin` data set, we want to study how `yield` depends on the `treat` (proccess) and `blend` (corn steep liquor). 
+- In the `penicillin` data set, we want to study how `yield` depends on the `treat` (proccess) and `blend` (corn steep liquor). It is natural to treat `treat` as fixed effects and `blend` as a blocking variable (random effects).
 
 ```{r}
 penicillin
@@ -389,18 +391,24 @@ amod <- aov(yield ~ treat + Error(blend), data = penicillin)
 summary(amod)
 ```
 
-- The F test also applies to this balanced case.
+- The F test also applies to this balanced case, but cannot be generalized to more complicated cases.
 ```{r}
 anova(mmod)
+```
+More reliable F-tests can be achieved using adjusted degrees of freedom.
+```{r}
+library(pbkrtest)
+
+amod <- lmer(yield ~ treat + (1 | blend), data = penicillin, REML = FALSE)
+nmod <- lmer(yield ~ 1 + (1 | blend), penicillin, REML = FALSE)
+KRmodcomp(amod, nmod)
 ```
 
 - Parametric bootstrap. We observed LRT statistic
 ```{r}
-amod <- lmer(yield ~ treat + (1 | blend), data = penicillin, REML = FALSE)
-nmod <- lmer(yield ~ 1 + (1 | blend), data = penicillin, REML = FALSE)
 as.numeric(2 * (logLik(amod) - logLik(nmod)))
 ```
-The dubious $\chi_3$ approximation gives p-value
+The $\chi_3$ approximation gives p-value
 ```{r}
 pchisq(4.0474, 3, lower.tail = FALSE)
 ```
@@ -431,9 +439,9 @@ summary(pmod)
 
 - Let's test the `blend` random effects by parametric bootstrap. First calculate LRT statistic.
 ```{r}
-rmod <- lmer(yield ~ treat + (1 | blend), data = penicillin)
+rmod <- lmer(yield ~ treat + (1 | blend), data = penicillin, REML = FALSE)
 nlmod <- lm(yield ~ treat, data = penicillin)
-as.numeric(2 * (logLik(rmod) - logLik(nlmod, REML = TRUE)))
+as.numeric(2 * (logLik(rmod) - logLik(nlmod)))
 ```
 Parametric boostrap:
 ```{r}
@@ -443,9 +451,9 @@ for (i in 1:B) {
   ryield <- unlist(simulate(nlmod))  
   nlmodr <- lm(ryield ~ treat, data = penicillin)
   rmodr <- refit(rmod, ryield)
-  lrstatf[i] <- 2 * (logLik(rmod) - logLik(nlmod, REML = TRUE))
+  lrstatf[i] <- 2 * (logLik(rmodr) - logLik(nlmodr))
 }
-mean(lrstatf > 2.7629)
+mean(lrstatf > 3.453634)
 ```
 
 - The exact LRT simulation method.
